[project]
name = "langgraph-revise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
